# clawcode

./: .gitignore  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
todo-cli/: README.md  pyproject.toml
todo-cli/docs/: USAGE.md
todo-cli/env/: requirements.txt
todo-cli/src/todo_cli/: __init__.py  main.py  storage.py
todo-cli/src/todo_cli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
todo-cli/tests/: test_storage.py
